2007-06-06  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS:  Mention new sdiff aliases 1 and 2 for l and r.
	* doc/diff.texi (Merge Commands): Likewise.
	* src/sdiff.c (give_help): Give help for them.
	(edit): Support them.

2007-04-11  Paul Eggert  <eggert@cs.ucla.edu>

	* doc/diff.texi (Detailed diff3 Normal): "range is a singleton" ->
	"there is only one line", for clarity.  Suggested by Jerry Peek.

2007-04-04  Paul Eggert  <eggert@cs.ucla.edu>

	* TODO: Mention possible sdiff improvement.

	* bootstrap: Sync from gnulib.
	* src/cmp.c: Don't include exit.h; no longer needed.
	* src/diff.c: Likewise.
	* src/sdiff.c: Likewise.
	* src/dir.c: Don't include strcase.h; no longer needed.
	* README-alpha: Remove, replacing with:
	* README-hacking: New file, taken from coreutils with some changes.
	The rename is required by the change to 'bootstrap'.

2006-11-15  Paul Eggert  <eggert@cs.ucla.edu>

	* src/analyze.c (build_reverse_script): Fix typo in comment.
	Problem and fix reported by Daniel Hipschman.

2006-11-14  Paul Eggert  <eggert@cs.ucla.edu>

	Don't assume SIGPIPE exists, and that sigblock and sigsetmask
	exist if sigprocmask does not.  Problem reported by Paul Edwards
	for MVS 3.8.
	* configure.ac (sigblock): Check whether this function is
	available, if sigprocmask is not.
	* src/sdiff.c (sigs): Omit SIGPIPE if it's not defined.
	Put SIGINT last; all uses changed.
	(handler_index_of_SIGPIPE): Omit if SIGPIPE is not defined.
	(sigblock, sigsetmask) [!HAVE_SIGBLOCK]: New macros.
	(sigprocmask): Don't dump core if O is null.

2006-11-04  Paul Eggert  <eggert@cs.ucla.edu>

	* src/sdiff.c (sigprocmask) [! HAVE_SIGPROCMASK]: Cast 2nd arg to
	sigset_t *, since it might be a literal 0.  Problem reported by
	Paul Edwards for MVS 3.8.

2006-09-05  Paul Eggert  <eggert@cs.ucla.edu>

	* NEWS: diff -u no longer outputs trailing white space unless the
	input data has it.  Suggested by Jim Meyering.
	* doc/diff.texi (Detailed Unified): Document this.